<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/home">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/home" />
                <item
                    android:id="@+id/menu_chat"
                    android:icon="@drawable/ic_teacher"
                    android:title="@string/chat" />


            </group>
        </menu>
    </item>

    <item android:title="@string/profile">
        <menu>

            <item
                android:id="@+id/menu_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile" />
            <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />

        </menu>
    </item>
    <item android:title="@string/social">
        <menu>
            <item
                android:id="@+id/menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/menu_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>