<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="@color/gray"
            app:boxCornerRadiusBottomEnd="20dp"

            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:passwordToggleTint="@color/BlueColor"
            app:startIconDrawable="@drawable/ic_mail"
            app:startIconTint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:maxLength="20"
                android:textColor="@color/gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="@color/gray"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:counterEnabled="true"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmailLayout"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:maxLength="10"
                android:textColor="@color/gray" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.4"
                android:background="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        <EditText-->
        <!--            android:id="@+id/inputPassword"-->
        <!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
        <!--            android:layout_width="250dp"-->
        <!--            android:layout_height="45dp"-->
        <!--            android:layout_marginTop="32dp"-->
        <!--            android:background="@drawable/edittext_shape"-->
        <!--            android:hint="@string/password"-->
        <!--            android:imeOptions="actionDone"-->
        <!--            android:importantForAutofill="no"-->
        <!--            android:inputType="textPassword"-->
        <!--            android:paddingStart="20dp"-->
        <!--            android:paddingTop="10dp"-->
        <!--            android:paddingEnd="10dp"-->
        <!--            android:paddingBottom="10dp"-->
        <!--            android:textColor="@color/black_overlay"-->
        <!--            android:textColorHint="@color/black_overlay" />-->

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forget_password" />


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignIn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_shape"
                android:padding="4dp"
                android:text="@string/Submit"
                android:textAllCaps="true" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:visibility="invisible" />


        </FrameLayout>
    </LinearLayout>


</ScrollView>