<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:background="@drawable/im_background_toolbar_cover"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:navigationIcon="@drawable/ic_menu" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="21dp"
                android:background="@color/icon_background"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="20dp" />


            <ImageButton
                android:id="@+id/tap1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/im_background_tap"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolbar"
                app:layout_constraintVertical_bias="0.757" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/chats"
                app:layout_constraintBottom_toBottomOf="@id/tap1"
                app:layout_constraintEnd_toEndOf="@+id/tap1"
                app:layout_constraintStart_toStartOf="@id/tap1"
                app:layout_constraintTop_toTopOf="@+id/tap1" />




            <ImageView
                android:id="@+id/tap2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/im_background_tap"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                app:layout_constraintEnd_toStartOf="@+id/tap3"
                app:layout_constraintStart_toEndOf="@+id/tap1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.757" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/users"
                app:layout_constraintBottom_toBottomOf="@id/tap2"
                app:layout_constraintEnd_toEndOf="@+id/tap2"
                app:layout_constraintStart_toStartOf="@id/tap2"
                app:layout_constraintTop_toTopOf="@+id/tap2" />

            <ImageView
                android:id="@+id/tap3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/im_background_tap"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.757" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/groups"
                app:layout_constraintBottom_toBottomOf="@id/tap3"
                app:layout_constraintEnd_toEndOf="@+id/tap3"
                app:layout_constraintStart_toStartOf="@id/tap3"
                app:layout_constraintTop_toTopOf="@+id/tap3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainer"
            android:name="com.example.universityapplication.fragments.MainFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"

            android:foregroundGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottomAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:fabCradleMargin="3dp"
                app:fabCradleRoundedCornerRadius="20dp"
                app:fabCradleVerticalOffset="3dp">

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottomNav"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    app:menu="@menu/bottom_nav_menu_chat"

                    >


                </com.google.android.material.bottomnavigation.BottomNavigationView>
            </com.google.android.material.bottomappbar.BottomAppBar>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/BlueColor"
                android:contentDescription="@string/floating_action_button"
                android:src="@drawable/ic_home"
                android:tint="@color/white"
                app:backgroundTint="@color/BlueColor"
                app:layout_anchor="@id/bottomAppBar"
                app:tint="@null" />


        </androidx.coordinatorlayout.widget.CoordinatorLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.navigation.NavigationView
                android:id="@+id/navigationView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                app:headerLayout="@layout/header"
                app:menu="@menu/main_menu" />


</androidx.drawerlayout.widget.DrawerLayout>